# updatr

./: Cargo.toml  README.md
src/: client.rs  errors.rs  main.rs  response_handlers.rs  upload_data.rs
